--- a/style.css
+++ b/style.css
@@ -13,15 +13,15 @@ body {
 }
 
 .container {
-    width: 422px;
+    width: fit-content;
     height: 200px;
     padding: 30px;
     display: flex;
-    gap: 30px;
+    gap: 20px;
     flex-shrink: 0;
     border-radius: 14px;
-    backdrop-filter: blur(10px); 
-    background: rgba(218, 114, 17, 0.7); 
+    backdrop-filter: blur(10px);
+    background: rgba(218, 114, 17, 0.7);
     box-shadow: 0 0 10px 1px black;
 }
 
@@ -33,11 +33,6 @@ body {
     font-weight: 500;
     line-height: normal;
 }
-
-.container img {
-    margin-left: 44px;
-}
-
 .container .khat {
     background-color: #FFF;
     width: 1px;
@@ -47,19 +42,35 @@ body {
 .right {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 5px;
 }
 
-.right .city {
+select {
     color: #FFF;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
+    font-size: 20px;
+    appearance: none;
+    border: 1px solid white;
+    padding: 5px;
+    margin-bottom: 10px;
+    outline: none;
+    border-radius: 10px 5px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background: none;
+    cursor: pointer;
 }
 
-.right > h1 {
-    font-size: 50px;
+select option {
+    color: #000;
+}
+
+div .harara {
+    font-size: 40px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    mix-blend-mode: overlay;
+}
+
+div .riya7 {
+    font-size: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     mix-blend-mode: overlay;
 }
